--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(FE_System C)
 
-# [요청사항 반영] Release 빌드 + O2 최적화 + 디버그 비활성화
+# Release 빌드 + O2 최적화 + 디버그 비활성화
 set(CMAKE_BUILD_TYPE Release)
 add_compile_options(-O2 -DNDEBUG)
 
